--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index_kk_.js"
   },
   "dependencies": {
     "cool-ascii-faces": "^1.3.3",
